# ctag

./: .ctag_nix_config.nu  .env.example  .flake8  .gitignore  Cargo.toml  LICENSE  MANIFEST.in  MIGRATION.md  NIX_USAGE.md  README.md  commands.json  ctag_local  debug_cql.py  debug_env.py  demo.tape  flake.nix  justfile  omnix.yaml  pyproject.toml  pytest.ini  readme.md  requirements-dev.txt  requirements.txt  setup.py
.clinerules/: architecture.md
.github/workflows/: ci.yml  e2e.yml  pipeline.yml  release.yml  setup-env.yml
docs/: NIX_USAGE.md  architecture.md  atlassain-usage.md  atlassian-api-confluence-page-example.md  cql-examples.md  debug_cql.py  development.md  example-commands.csv  example-commands.json  nu.md  thicker-lead.md  usage.md
e2e/: e2e_advanced.rs  e2e_basic.rs  e2e_bulk.rs  e2e_regex.rs  test.md
e2e/common/: mod.rs
examples/: commands.json  schema.json
nix/modules/: devshell.nix  rust.nix
nu/: ctag.nu
src/: __init__.py  cql.py  csv_processor.py  interactive.py  json_processor.py  lib.rs  main.py  main.rs  stdin_processor.py  tags.py  ui.rs  utils.py
src/api/: mod.rs
src/commands/: __init__.py  add.py  add.rs  from_csv.py  from_json.py  from_json.rs  from_stdin_json.py  from_stdin_json.rs  get.py  get.rs  mod.rs  remove.py  remove.rs  replace.py  replace.rs
src/models/: __init__.py  commands.py  mod.rs  search_results.json  search_results.py
src/ops/: mod.rs
src/utils/: __init__.py  pydantic_utils.py  text_utils.py
tests/: .gitignore  README.md  __init__.py  conftest.py  e2e_sandbox.rs  test_add_command.py  test_config.py  test_dry_run.py  test_from_csv.py  test_from_json.py  test_from_stdin_json.py  test_get_command.py  test_main_cli.py  test_remove_command.py  test_replace_command.py
