[package]
name = "ctag"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
anyhow = "1.0"
indicatif = "0.17"
dialoguer = "0.11"
url = "2.5"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
urlencoding = "2.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
