[package]
name = "ctag"
description = "A command-line tool for managing Confluence tags"
authors = ["Olive Casazza <olive.casazza@schrodinger.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
anyhow = "1.0"
indicatif = "0.17"
dialoguer = "0.11"
url = "2.5"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
urlencoding = "2.1"
colored = "3.0.0"
fastrand = "2.3"
comfy-table = { version = "7.1", features = ["tty", "custom_styling"] }
terminal_size = "0.3"
csv = "1.3"
regex = "1.12.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[[test]]
name = "e2e_basic"
path = "e2e/e2e_basic.rs"

[[test]]
name = "e2e_bulk"
path = "e2e/e2e_bulk.rs"

[[test]]
name = "e2e_advanced"
path = "e2e/e2e_advanced.rs"

[[test]]
name = "e2e_regex"
path = "e2e/e2e_regex.rs"
